--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AmstelBright</string>
+    <string name="app_icon_tag">TAG</string>
+    <string name="close_app">Close App?</string>
+    <string name="close_app_text">Are you sure you want to close this app?</string>
+
 </resources>
